<?xml version="1.0"?>
<package>
  <name>moveit_tutorials</name>
  <version>0.1.0</version>
  <description>The moveit_tutorials package</description>
  <license>BSD</license>

  <author email="sachinc@willowgarage.com">Sachin Chitta</author>
  <author email="dave@picknik.ai">Dave Coleman</author>
  <author email="mike@picknik.ai">Mike Lautman</author>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>joy</run_depend>

</package>
